<resources>
    <string name="app_name">Chit Whisper</string>
    <string name="we_will_send_you_an">We will send you an</string>
    <string name="on_this_mobile_number">on this mobile number</string>
    <string name="otp_verification">OTP Verification</string>
    <string name="one_time_password">One Time Password</string>
    <string name="type_your_mobile_number">Type your Mobile Number</string>
    <string name="verify_919978280870">Verify +919978280870</string>
    <string name="enter_the_otp_code_to_verify_your_mobile_number">Enter the OTP code to Verify your Mobile Number</string>
    <string name="entre_otp_code">Entre OTP Code</string>
    <string name="entre_otp">Entre_otp</string>
    <string name="entre_otp1">Entre_OTP</string>
    <string name="name">Name</string>
    <string name="please_set_name_and_profile_photo">Please set name and Profile Photo</string>
    <string name="profile_information">Profile Information</string>
    <string name="chit_whisper_name">Chit Whisper</string>
</resources>