<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:background="#F2F7F4"
    android:gravity="center_horizontal"
    tools:context=".Verification">

    <ImageView
        android:src="@drawable/users"
        android:scaleType="fitCenter"
        android:layout_marginTop="10dp"
        android:layout_width="2500dp"
        android:layout_height="250dp"/>
    
    <TextView
        android:text="@string/otp_verification"
        android:textAlignment="center"
        android:textSize="22sp"
        android:textStyle="bold"
        android:textColor="#036007"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="5dp"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:text="@string/we_will_send_you_an"
            android:layout_marginEnd="6dp"
            android:textSize="16sp"
            android:textStyle="normal"
            android:textColor="#656262"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:text="@string/one_time_password"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="#0B0B0B"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>
    <TextView
        android:text="@string/on_this_mobile_number"
        android:layout_marginEnd="6dp"
        android:textSize="16sp"
        android:textStyle="normal"
        android:textColor="#656262"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <androidx.cardview.widget.CardView
        app:cardUseCompatPadding="true"
        app:cardCornerRadius="8dp"
        app:cardElevation="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <LinearLayout
        android:orientation="vertical"
        android:gravity="center"
        android:padding="15dp"
        android:background="@color/white"
        android:layout_margin="15dp"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <EditText
        android:id="@+id/editnumber1"
        android:hint="@string/type_your_mobile_number"
        android:padding="10dp"
        android:ems="1"
        android:inputType="phone"
        android:textSize="22sp"
        android:textStyle="bold|normal"
        android:textColor="#191818"
        android:layout_marginBottom="15dp"
        android:background="@drawable/backgroudshapeprofile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/continueBtn"
        android:text="Continue"
        android:textStyle="bold|normal"
        android:textSize="17sp"
        android:textAllCaps="false"
        android:backgroundTint="#2D5497"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    </LinearLayout>

</LinearLayout>