<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:layout_gravity="center"
    tools:context=".ProfileSetup">

    <ImageView
        android:id="@+id/profileimage"
        android:layout_marginTop="32dp"
        android:src="@drawable/resume"
        android:layout_width="150dp"
        android:layout_height="150dp"/>

    <TextView
        android:text="@string/profile_information"
        android:textAlignment="center"
        android:layout_marginTop="19dp"
        android:textSize="25sp"
        android:textStyle="bold|normal"
        android:textColor="#1C47E6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:text="@string/please_set_name_and_profile_photo"
        android:textAlignment="center"
        android:textSize="13sp"
        android:textStyle="bold|normal"
        android:textColor="#383839"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <androidx.cardview.widget.CardView
        app:cardUseCompatPadding="true"
        app:cardCornerRadius="8dp"
        app:cardElevation="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <LinearLayout
        android:orientation="vertical"
        android:gravity="center"
        android:padding="15dp"
        android:background="@color/white"
        android:layout_margin="15dp"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/name"
            android:hint="@string/name"
            android:padding="10dp"
            android:ems="1"
            android:textAlignment="center"
            android:inputType="phone"
            android:textSize="22sp"
            android:textStyle="bold|normal"
            android:textColor="#191818"
            android:layout_marginBottom="15dp"
            android:background="@drawable/backgroudshapeprofile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <Button
            android:id="@+id/continueBtn"
            android:text="Continue"
            android:textStyle="bold|normal"
            android:textSize="17sp"
            android:textAllCaps="false"
            android:backgroundTint="#2D5497"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </LinearLayout>

</LinearLayout>